Correction des types CSS modules et fichier de navigation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "strict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "include": [
-    "src"
+    "src",
+    "src/types"
   ]
 }
